SDKs/twilio.com/twilio_bulkexports_v1/1.40.0/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get github.com/speakeasy-api/openapi-directory/SDKs/twilio.com/twilio_bulkexports_v1/1.40.0/go
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "context"
    "log"
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()

    req := operations.CreateExportCustomJobRequest{
        RequestBody: &operations.CreateExportCustomJobCreateExportCustomJobRequest{
            Email: "Larue_Rau85@yahoo.com",
            EndDay: "corrupti",
            FriendlyName: "illum",
            StartDay: "vel",
            WebhookMethod: "error",
            WebhookURL: "deserunt",
        },
        ResourceType: "suscipit",
    }

    ctx := context.Background()
    res, err := s.CreateExportCustomJob(ctx, req, operations.CreateExportCustomJobSecurity{
        Password: "YOUR_PASSWORD_HERE",
        Username: "YOUR_USERNAME_HERE",
    })
    if err != nil {
        log.Fatal(err)
    }

    if res.BulkexportsV1ExportExportCustomJob != nil {
        // handle response
    }
}
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## Available Resources and Operations

### SDK SDK

* `CreateExportCustomJob`
* `DeleteJob`
* `FetchDay` - Fetch a specific Day.
* `FetchExport` - Fetch a specific Export.
* `FetchExportConfiguration` - Fetch a specific Export Configuration.
* `FetchJob`
* `ListDay` - Retrieve a list of all Days for a resource.
* `ListExportCustomJob`
* `UpdateExportConfiguration` - Update a specific Export Configuration.
<!-- End SDK Available Operations -->

### Maturity

This SDK is in beta and therefore, we recommend pinning usage to a specific package version.
This way, you can install the same version each time without breaking changes unless you are intentionally
looking for the latest version.

### Contributions

While we value open-source contributions to this SDK, this library is generated and maintained programmatically.
Feel free to open a PR or a Github issue as a proof of concept and we'll do our best to include it in a future release !

### SDK Created by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
